# tinyserve

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  build_ggml.py  docker-compose.yml  pyproject.toml  setup.py
benchmarks/: bench_micro_opt_20260326.txt  cache_benchmark_20260326.json  cache_benchmark_20260326.txt  compile_test_20260404.txt  comprehensive_20260326.json  comprehensive_20260326.txt  context_exploration_20260403.txt  cython_bench_20260331.json  cython_bench_20260331.txt  decode_profile_20260404.txt  deferred_mxfp4_bench_20260331.json  deferred_mxfp4_bench_20260331.txt  disk_offload_bgfill_20260325.txt  disk_offload_optimized_20260325.txt  dynamic_rebalance_e2e_20260331.txt  expert_similarity_20260331.json  expert_similarity_20260331.txt  fast_decode_comparison_20260404.txt  flex_final_20260325.txt  gptoss20b_context.json  gptoss20b_fp8kv_longctx.json  gptoss20b_fp8kv_longctx.txt  gptoss20b_fp8kv_v3.json  gptoss20b_fp8kv_v3.txt  gptoss20b_streaming.json  gpu_streaming_fixed_20260404.txt  headwise_context_20260403.txt  kv_offload_eager_20260325.txt  kv_offload_flex_20260325.txt  post_opt_decode_20260404.txt  sdpa_cpu_kv_20260325.txt  streaming_window_sweep_20260403.txt
docs/: gpt-oss-20b-architecture.md  troubleshooting.md
scripts/: autotune.py  bench_attention.py  bench_context.py  bench_flex_only.py  benchmark.py  comprehensive_bench.py  post_download.sh  repack_experts.py  split_weights.py  test_contexts.py  test_dynamic_rebalance.py  test_qwen_122b.py  validate_gptoss20b.py  validate_real_models.py
src/: __init__.py  attention.py  cache_policy.py  config.py  cpu_expert.py  expert_store.py  experts.py  generate.py  hooks.py  (+16 more)
(+114 files in other folders)
