[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyserve"
version = "0.1.0"
description = "Run large MoE models exceeding VRAM via expert CPU offloading with GPU cache"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "torch>=2.6",
    "transformers>=4.50",
    "safetensors>=0.4",
    "huggingface-hub>=0.25",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["requires_cuda: test needs NVIDIA GPU"]
